fixing heroku alignment

--- a/react-app/src/components/CreateDesignForm/CreateDesignForm.css
+++ b/react-app/src/components/CreateDesignForm/CreateDesignForm.css
@@ -77,7 +77,7 @@
 #temp-menu-item,
 #temp-menu-item-brand {
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   justify-content: center;
 
   flex-flow: wrap row;
